implemented face and dog detection

--- a/dog_breed_classifier/app/templates/upload.html
+++ b/dog_breed_classifier/app/templates/upload.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Dog Breed Classifier</h1>
+    <p>The Dog Breed Classifier takes an image as input.</p>
     <p>If a dog is detected in it, you will receive the predicted breed.</p>
     <p>If a human face is detected in it, you will receive the resembling dog breed.</p>
     <p>If neither is detected, you will receive an error message.</p>
