--- a/dog_breed_classifier/app/templates/result.html
+++ b/dog_breed_classifier/app/templates/result.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Result</title>
+    <title>Dog Breed Classifier</title>
     <style>
         img {
             max-width: 25%;
